-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.6.0
-
None
-
3
-
13217
This issue was created by maloo for nasf <fan.yong@intel.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/a7655172-b233-11e3-abd9-52540035b04c.
The sub-test test_12 failed with the following error:
test failed to respond and timed out
Info required for matching: sanity-scrub 12
The OST crashed as following:
15:09:47:LustreError: 25612:0:(ofd_dev.c:1186:ofd_orphans_destroy()) lustre-OST0000: error destroying precreated id [0x100000000:0xa61:0x0]: rc = -116 15:09:47:LustreError: 25612:0:(ofd_dev.c:1186:ofd_orphans_destroy()) lustre-OST0000: error destroying precreated id [0x100000000:0xa60:0x0]: rc = -78 15:09:47:Lustre: lustre-OST0000: deleting orphan objects from 0x200000401:2619 to 0x200000401:2657 15:09:47:Lustre: lustre-OST0000: deleting orphan objects from 0x200000400:2619 to 0x200000400:2657 15:09:47:Lustre: lustre-OST0000: deleting orphan objects from 0x200000402:2619 to 0x200000402:2657 15:09:47:LustreError: 25612:0:(osd_handler.c:2473:osd_object_destroy()) ASSERTION( osd_inode_unlinked(inode) || inode->i_nlink == 1 || inode->i_nlink == 2 ) failed: 15:09:47:LustreError: 25612:0:(osd_handler.c:2473:osd_object_destroy()) LBUG 15:09:47:Pid: 25612, comm: ll_ost00_012 15:09:47: 15:09:47:Call Trace: 15:09:47: [<ffffffffa0483895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] 15:09:47: [<ffffffffa0483e97>] lbug_with_loc+0x47/0xb0 [libcfs] 15:09:47: [<ffffffffa0d29a9a>] osd_object_destroy+0x45a/0x460 [osd_ldiskfs] 15:09:47: [<ffffffffa0e55460>] ofd_object_destroy+0x380/0x680 [ofd] 15:09:47: [<ffffffffa0e50efd>] ofd_destroy_by_fid+0x35d/0x620 [ofd] 15:09:47: [<ffffffffa07fac80>] ? ldlm_blocking_ast+0x0/0x180 [ptlrpc] 15:09:47: [<ffffffffa07fc2f0>] ? ldlm_completion_ast+0x0/0x930 [ptlrpc] 15:09:47: [<ffffffffa0e482e6>] ofd_create_hdl+0x1836/0x2460 [ofd] 15:09:47: [<ffffffffa0825f7c>] ? lustre_msg_add_version+0x6c/0xc0 [ptlrpc] 15:09:47: [<ffffffffa08887bc>] tgt_request_handle+0x23c/0xac0 [ptlrpc] 15:09:47: [<ffffffffa083799a>] ptlrpc_main+0xd1a/0x1980 [ptlrpc] 15:09:47: [<ffffffffa0836c80>] ? ptlrpc_main+0x0/0x1980 [ptlrpc] 15:09:47: [<ffffffff8109aee6>] kthread+0x96/0xa0 15:09:47: [<ffffffff8100c20a>] child_rip+0xa/0x20 15:09:47: [<ffffffff8109ae50>] ? kthread+0x0/0xa0 15:09:47: [<ffffffff8100c200>] ? child_rip+0x0/0x20 15:09:47: 15:09:47:Kernel panic - not syncing: LBUG