LU-4803 ofd: skip orphan cleanup when inject OI error

When inject OI error for simulating some failure cases, the object
may be mapped to invalid local target (inode for ldiskfs), so skip
the orphan cleanup in OSP to avoid unexpected warning or destroy.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: I8e0a8a9bb4ae584fc8f40f894a19e8f10aa24c10