lustre/osd-ldiskfs/osd_handler.c
@@ -466,9 +466,6 @@ static int osd_check_lma(const struct lu_env *env, struct osd_object *obj)
 	int			 rc;
 	ENTRY;
 
-	if (OBD_FAIL_CHECK(OBD_FAIL_OSD_COMPAT_INVALID_ENTRY))
-		RETURN(0);
-
 	CLASSERT(LMA_OLD_SIZE >= sizeof(*lma));
 	rc = __osd_xattr_get(inode, dentry, XATTR_NAME_LMA,
 			     info->oti_mdt_attrs_old, LMA_OLD_SIZE);
